Some manual and claude provided refactorings